--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
 asgiref==3.2.3
+astroid==2.3.3
 cffi==1.14.0
-Django==3.0.3
+colorama==0.4.3
+Django==3.0.4
 django-crispy-forms==1.9.0
+djangorestframework==3.11.0
 h11==0.9.0
 hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 Pillow==7.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.19
 PyHamcrest==2.0.1
-pyOpenSSL==19.1.0
+pylint==2.4.4
 pytz==2019.3
-service-identity==18.1.0
+six==1.14.0
 sqlparse==0.3.0
-txaio==20.1.1
-websockets==8.1
+typed-ast==1.4.1
+wrapt==1.11.2
